[package]
name = "library"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
regex = "1.12.2"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
serenity = "0.12.4"
discourse = { version = "0.1.0", path = "../discourse" }
reqwest = { version = "0.12.24", features = ["cookies"] }
reqwest-middleware = "0.4.2"
html2md = { git = "https://gitlab.com/themadseventeen/html2md.git", branch = "master" }
url = "2.5.7"
tokio = "1.48.0"
http = "1.3.1"
chrono = "0.4.42"
async-trait = "0.1.89"
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
pulsar = "6.5.0"
